# howdy-world

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARK.md  CITATIONS.md  COMPILED_ENDPOINT_POLICY.md  LICENSE.md  NOTES.md  POLICY.md  README.md  TODO.md  compose.yml  docker-compose.yml  global.json
_builder/: .rubocop.yml  .rubocop_todo.yml  Gemfile  Guardfile  README.md  TODO.md  _nginx-example.conf  builder.rb  index.html.erb  lang_scaffold.rb  languages.csv
_dashboard/: Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.yml  lighttpd.conf
ada/: README.md  howdy.ada
caddy/: .dockerignore  .gitignore  Caddyfile  Dockerfile  NOTES.md  README.md  compose.yml
clojure/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  NOTES.md  README.md  TODO.md  compose.dev.yml  compose.yml  project.clj
crystal-kemal/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.yml  index.html  shard.yml
docker/: compose.e2e.yml
dotnet-aspnet/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  NOTES.md  Program.cs  README.md  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  dotnet-aspnet.csproj
e2e/: Dockerfile  README.md  endpoints.json  package.json  playwright.config.js
elixir-bandit/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  mix.exs
elixir-phoenix/: .dockerignore  .gitignore  (+6 more)
python-fastapi/: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  compose.yml  pyproject.toml
python-fastapi/app/: __init__.py  main.py
python-fastapi/tests/: test_howdy.py
(+423 files in other folders)
